Desserts menu category completed

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -117,6 +117,13 @@
                     <h4>RasMalai</h4>
                     <button onclick="addToCart('RasMalai')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/shira.jpg" alt="shira">
+                    <h4>Shira</h4>
+                    <button onclick="addToCart('shira')">Add to Cart</button>
+                </div>
+            </div>
+        </div>
 
     
 </body>
