script file added

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -131,6 +131,7 @@
             <button onclick="checkout()">Proceed to Checkout</button>
         </div>
     </section>
+    <script src="./../javascript/maharashtrian-food.js"></script>
         
 
     
