--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -30,7 +30,7 @@
         <h2> Maharashtrian Menu</h2>
 
         <div class="menu-category">
-            <h3>Starters</h3>
+            <h3 class="menu-title">Starters</h3>
             <div class="menu-items">
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/pav-bhaji.jpg" alt="Pav Bhaji">
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="menu-category">
-            <h3>Main Course</h3>
+            <h3 class="menu-title">Main Course</h3>
             <div class="menu-items">
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/pithal-bhakari.jpg" alt="pithal-bhakari">
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="menu-category">
-            <h3>Desserts</h3>
+            <h3 class="menu-title">Desserts</h3>
             <div class="menu-items">
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/gulab-jamun.jpg" alt="gulab-jamun">
@@ -118,9 +118,9 @@
                     <button onclick="addToCart('RasMalai')">Add to Cart</button>
                 </div>
                 <div class="menu-item">
-                    <img src="./../images/maharashtrian-food/shira.jpg" alt="shira">
-                    <h4>Shira</h4>
-                    <button onclick="addToCart('shira')">Add to Cart</button>
+                    <img src="./../images/maharashtrian-food/motichoor-laddu.webp" alt="shira">
+                    <h4>MotiChoor-Laddu</h4>
+                    <button onclick="addToCart('motichoor-laddu')">Add to Cart</button>
                 </div>
             </div>
         </div>
