--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -35,42 +35,42 @@
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/pav-bhaji.jpg" alt="Pav Bhaji">
                     <h4>Pav Bhaji</h4>
-                    <button onclick="addToCart('Pav Bhaji')">Add to Cart</button>
+                    <button onclick="addToCart('Pav Bhaji')" class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/vada-pav.jpg" alt="Vada Pav">
                     <h4>Vada Pav</h4>
-                    <button onclick="addToCart('Vada Pav')">Add to Cart</button>
+                    <button onclick="addToCart('Vada Pav')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/sabudana-khichdi.jpg" alt="Sabudana Khichdi">
                     <h4>Sabudana-Khichdi</h4>
-                    <button onclick="addToCart('Sabudana Khichdi')">Add to Cart</button>
+                    <button onclick="addToCart('Sabudana Khichdi')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/misal-pav.webp" alt="misal-pav">
                     <h4>Misal-Pav</h4>
-                    <button onclick="addToCart('Misal-Pav')">Add to Cart</button>
+                    <button onclick="addToCart('Misal-Pav')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/pani-puri.jpg" alt="pani-puri">
                     <h4>Pani-Puri</h4>
-                    <button onclick="addToCart('pani-puri')">Add to Cart</button>
+                    <button onclick="addToCart('pani-puri')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/poha-tea.jpg" alt="poha-tea">
                     <h4>Poha-Tea</h4>
-                    <button onclick="addToCart('poha-tea')">Add to Cart</button>
+                    <button onclick="addToCart('poha-tea')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/upit.webp" alt="upit">
                     <h4>Upit</h4>
-                    <button onclick="addToCart('upit')">Add to Cart</button>
+                    <button onclick="addToCart('upit')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/bhji.jpg" alt="bhji">
                     <h4>Bhji</h4>
-                    <button onclick="addToCart('bhji')">Add to Cart</button>
+                    <button onclick="addToCart('bhji')"  class="addbtn">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -80,22 +80,22 @@
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/pithal-bhakari.jpg" alt="pithal-bhakari">
                     <h4>Pithal-Bhakari</h4>
-                    <button onclick="addToCart('pithal-bhakari')">Add to Cart</button>
+                    <button onclick="addToCart('pithal-bhakari')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/puran-poli.jpg" alt="puran-poli">
                     <h4>Puran-Poli</h4>
-                    <button onclick="addToCart('puran-poli')">Add to Cart</button>
+                    <button onclick="addToCart('puran-poli')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/thali-pitha.webp" alt="thali-pitha">
                     <h4>Thali-Pitha</h4>
-                    <button onclick="addToCart('thali-pitha')">Add to Cart</button>
+                    <button onclick="addToCart('thali-pitha')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/puri-bhaji.jpg" alt="puri-bhaji">
                     <h4>Puri-Bhaji</h4>
-                    <button onclick="addToCart('puri-bhaji')">Add to Cart</button>
+                    <button onclick="addToCart('puri-bhaji')" class="addbtn">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -105,22 +105,22 @@
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/gulab-jamun.jpg" alt="gulab-jamun">
                     <h4>GulabJamun</h4>
-                    <button onclick="addToCart('GulabJamun')">Add to Cart</button>
+                    <button onclick="addToCart('GulabJamun')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/jilebi.png" alt="jilebi">
                     <h4>Jilebi</h4>
-                    <button onclick="addToCart('Jilebi')">Add to Cart</button>
+                    <button onclick="addToCart('Jilebi')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/ras-malai.png" alt="ras-malai">
                     <h4>RasMalai</h4>
-                    <button onclick="addToCart('RasMalai')">Add to Cart</button>
+                    <button onclick="addToCart('RasMalai')"  class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
                     <img src="./../images/maharashtrian-food/motichoor-laddu.webp" alt="shira">
                     <h4>MotiChoor-Laddu</h4>
-                    <button onclick="addToCart('motichoor-laddu')">Add to Cart</button>
+                    <button onclick="addToCart('motichoor-laddu')"  class="addbtn">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
             <h3>Your Cart</h3>
             <ul id="cart-list">
             </ul>
-            <button onclick="checkout()">Proceed to Checkout</button>
+            <button onclick="checkout()" class="btn">Proceed to Checkout</button>
         </div>
     </section>
     <script src="./../javascript/maharashtrian-food.js"></script>
