new section is created

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -49,5 +49,9 @@
             <img src="./../images/reservation-page/exterior-img4.jpg" alt="Exterior Table 4">
         </div>
     </section>
+
+    <section>
+        
+    </section>
 </body>
 </html>
