--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -52,7 +52,9 @@
 
     <section>
         <h2>Make a Reservation</h2>
-
+        <form>
+            
+        </form>
     </section>
 </body>
 </html>
