input text box is use for name

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -53,7 +53,8 @@
     <section>
         <h2>Make a Reservation</h2>
         <form>
-            
+            <input type="text" name="name" placeholder="Full Name" required>
+
         </form>
     </section>
 </body>
