--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -54,6 +54,7 @@
         <h2>Make a Reservation</h2>
         <form>
             <input type="text" name="name" placeholder="Full Name" required>
+            <input type="email" name="email" placeholder="Email Address" required>
 
         </form>
     </section>
