--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -55,6 +55,7 @@
         <form>
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="email" name="email" placeholder="Email Address" required>
+            <input type="tel" name="phone" placeholder="Phone Number" required>
 
         </form>
     </section>
