input text box is use for date

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -56,6 +56,7 @@
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="email" name="email" placeholder="Email Address" required>
             <input type="tel" name="phone" placeholder="Phone Number" required>
+            <input type="date" name="date" required>
 
         </form>
     </section>
