input text box is use for time

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -57,6 +57,7 @@
             <input type="email" name="email" placeholder="Email Address" required>
             <input type="tel" name="phone" placeholder="Phone Number" required>
             <input type="date" name="date" required>
+            <input type="time" name="time" id="time" required>
 
         </form>
     </section>
