reservation form section completed

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -50,15 +50,14 @@
         </div>
     </section>
 
-    <section>
+    <section class="reservation-form-section">
         <h2>Make a Reservation</h2>
-        <form>
+        <form action="#" method="POST" class="reservation-form">
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="email" name="email" placeholder="Email Address" required>
             <input type="tel" name="phone" placeholder="Phone Number" required>
             <input type="date" name="date" required>
             <input type="time" name="time" id="time" required>
-
         </form>
     </section>
 </body>
