select tag is use for table type

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -58,6 +58,12 @@
             <input type="tel" name="phone" placeholder="Phone Number" required>
             <input type="date" name="date" required>
             <input type="time" name="time" id="time" required>
+
+            <select name="table-type" id="table-type" required>
+                <option value="" disabled selected>Choose Table Type</option>
+                <option value="interior">Interior Table</option>
+                <option value="exterior">Exterior Table</option>
+            </select>
         </form>
     </section>
 </body>
