select tag is use for choose the seats

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -64,6 +64,18 @@
                 <option value="interior">Interior Table</option>
                 <option value="exterior">Exterior Table</option>
             </select>
+
+            <select name="seats" id="seats" required>
+                <option value="" disabled selected>Number of Seats</option>
+                <option value="1">1 Seat</option>
+                <option value="2">2 Seats</option>
+                <option value="3">3 Seats</option>
+                <option value="4">4 Seats</option>
+                <option value="5">5 Seats</option>
+                <option value="6">6 Seats</option>
+                <option value="7">7 Seats</option>
+                <option value="8">8 Seats</option>
+            </select>
         </form>
     </section>
 </body>
