div tag is use for price display

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -76,6 +76,9 @@
                 <option value="7">7 Seats</option>
                 <option value="8">8 Seats</option>
             </select>
+
+            <div id="price-display">
+            </div>
         </form>
     </section>
 </body>
