textarea is use for any special requests

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -79,6 +79,9 @@
 
             <div id="price-display">
             </div>
+
+            <textarea name="special-request" placeholder="Any Special Requests?" rows="4"></textarea>
+
         </form>
     </section>
 </body>
