button is use for reserve table

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -81,7 +81,7 @@
             </div>
 
             <textarea name="special-request" placeholder="Any Special Requests?" rows="4"></textarea>
-
+            <button type="submit">Reserve Table</button>
         </form>
     </section>
 </body>
