reservation page is completed

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -92,5 +92,6 @@
             <button id="popup-button">OK</button>
         </div>
     </div>
+    <script src="./../javascript/reservation.js"></script>
 </body>
 </html>
