file structure changes

--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="./../css/sign-up.css">
+    <link rel="stylesheet" href="./../css/sign_up.css">
 </head>
 <body>
     <div class="container">
@@ -36,6 +36,6 @@
         <p id="error-message" style="color:tomato;"></p>
     </div>
 
-    <script src="./../javascript/sign-up.js"></script>
+    <script src="./../javascript/sign_up.js"></script>
 </body>
 </html>
