--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,7 @@
 
 
             <div class="register-link">
-                <p>Don't have an account? <a href="./sign-up.html">Sign-Up</a></p>
+                <p>Don't have an account? <a href="./sign_up.html">Sign-Up</a></p>
             </div>
 
         </form>
