complete game added

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -68,11 +68,11 @@
       <br><br>
       <div class="game-container1">
         <div class="card1">
-          <img src="../images/about_us/n1.png" alt="Food Image" class="card1-image">
+          <img src="../images/about_us/j4.jpeg" alt="Food Image" class="card1-image">
           <div class="card1-back">
             <button class="start1-btn">Start Game</button>
             <button class="reset1-btn">Reset Game</button>
-            <p class="score1">Score: 0</p>
+            <p class="score1">If You Make 20 Score You Win<br>Score: 0</p>
             <div class="game1-images"></div>
           </div>
         </div>
