--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
             <p>Address: 123 Street, City, Country</p>                
           </div>
         </div>
-        
+        <div class="footer-bottom">
+          <p>2024 Your Company. All rights reserved.</p>
+        </div>
       </footer>
 
 
