--- a/pages/punjabi_food.html
+++ b/pages/punjabi_food.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasty Heaven - Punjabi Menu</title>
     <link rel="stylesheet" href="./../css/home.css">
-    <link rel="stylesheet" href="./../css/punjabi-food.css">
+    <link rel="stylesheet" href="./../css/punjabifood.css">
 </head>
 <body>
     <div class="container">
@@ -29,17 +29,17 @@
             <h3 class="menu-title">Starters</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="./../images/punjabi-food/paneer-tikka.jpg" alt="Paneer Tikka">
+                    <img src="./../images\punjabi_food\Tandoori-Paneer-Tikka-2.jpg" alt="Paneer Tikka">
                     <h4>Paneer Tikka</h4>
                     <button onclick="addToCart('Paneer Tikka')" class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
-                    <img src="./../images/punjabi-food/amritsari-kulcha.jpg" alt="Amritsari Kulcha">
+                    <img src="./../images/punjabi_food/Amritsari-Kulcha.jpg" alt="Amritsari Kulcha">
                     <h4>Amritsari Kulcha</h4>
                     <button onclick="addToCart('Amritsari Kulcha')" class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
-                    <img src="./../images/punjabi-food/chole-bhature.jpg" alt="Chole Bhature">
+                    <img src="./../images\punjabi_food\chole-bhature.jpg" alt="Chole Bhature">
                     <h4>Chole Bhature</h4>
                     <button onclick="addToCart('Chole Bhature')" class="addbtn">Add to Cart</button>
                 </div>
@@ -49,12 +49,12 @@
             <h3 class="menu-title">Main Course</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="./../images/punjabi-food/rajma-chawal.jpg" alt="Rajma Chawal">
+                    <img src="./../images\punjabi_food\rajma-chawal-1.jpg" alt="Rajma Chawal">
                     <h4>Rajma Chawal</h4>
                     <button onclick="addToCart('Rajma Chawal')" class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
-                    <img src="./../images/punjabi-food/makki-roti-sarson-saag.jpg" alt="Makki di Roti & Sarson da Saag">
+                    <img src="./../images\punjabi_food\RECIPE-NEW-IMG_Makki-ki-roti-and-sarson-ka-saag.jpg" alt="Makki di Roti & Sarson da Saag">
                     <h4>Makki di Roti & Sarson da Saag</h4>
                     <button onclick="addToCart('Makki di Roti & Sarson da Saag')" class="addbtn">Add to Cart</button>
                 </div>
@@ -64,12 +64,12 @@
             <h3 class="menu-title">Desserts</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="./../images/punjabi-food/gajar-halwa.jpg" alt="Gajar Ka Halwa">
+                    <img src="./../images\punjabi_food\30792f47ce9f294da614f72342152ddf.jpg" alt="Gajar Ka Halwa">
                     <h4>Gajar Ka Halwa</h4>
                     <button onclick="addToCart('Gajar Ka Halwa')" class="addbtn">Add to Cart</button>
                 </div>
                 <div class="menu-item">
-                    <img src="./../images/punjabi-food/phirni.jpg" alt="Phirni">
+                    <img src="./../images\punjabi_food\55368356.webp" alt="Phirni">
                     <h4>Phirni</h4>
                     <button onclick="addToCart('Phirni')" class="addbtn">Add to Cart</button>
                 </div>
@@ -81,6 +81,6 @@
             <button onclick="checkout()" class="btn">Proceed to Checkout</button>
         </div>
     </section>
-    <script src="./../javascript/punjabi-food.js"></script>
+    <script src="./../javascript/punjabifood.js"></script>
 </body>
 </html>
