--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -16,11 +16,11 @@
         <ul class="sidebar">
           <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Reservation</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="./menu.html">Menu</a></li>
+          <li><a href="./reservation.html">Reservation</a></li>
+          <li><a href="./about_us.html">About</a></li>
+          <li><a href="./contact_us.html">Contact</a></li>
+          <li><a href="./login.html">Login</a></li>
         </ul>
         <ul>
           <li ><a href="#">Tasty Heaven</a></li>
