dessserts images added

--- a/pages/punjabi_food.html
+++ b/pages/punjabi_food.html
@@ -43,6 +43,11 @@
                     <h4>Chole Bhature</h4>
                     <button onclick="addToCart('Chole Bhature')" class="addbtn">Add to Cart</button>
                 </div>
+                <!-- <div class="menu-item">
+                    <img src="./../images\punjabi_food\images.jpeg" alt="Aloo Gobi Paratha">
+                    <h4>Chole Bhature</h4>
+                    <button onclick="addToCart('Aloo Gobi Paratha')" class="addbtn">Add to Cart</button>
+                </div> -->
             </div>
         </div>
         <div class="menu-category">
@@ -58,6 +63,11 @@
                     <h4>Makki di Roti & Sarson da Saag</h4>
                     <button onclick="addToCart('Makki di Roti & Sarson da Saag')" class="addbtn">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images\punjabi_food\dal-makhani7-500x500.webp" alt="Dal Makhni">
+                    <h4>Makki di Roti & Sarson da Saag</h4>
+                    <button onclick="addToCart('Dal Makhni')" class="addbtn">Add to Cart</button>
+                </div>
             </div>
         </div>
         <div class="menu-category">
@@ -72,6 +82,11 @@
                     <img src="./../images\punjabi_food\55368356.webp" alt="Phirni">
                     <h4>Phirni</h4>
                     <button onclick="addToCart('Phirni')" class="addbtn">Add to Cart</button>
+                </div>
+                <div class="menu-item">
+                    <img src="./../images\punjabi_food\Baklava-Lassi-4533.webp" alt="Lassi">
+                    <h4>Phirni</h4>
+                    <button onclick="addToCart('Lassi')" class="addbtn">Add to Cart</button>
                 </div>
             </div>
         </div>
